--- a/Source Code/front-end/src/components/Common/CSS/common.scss
+++ b/Source Code/front-end/src/components/Common/CSS/common.scss
@@ -42,3 +42,12 @@ a {
 li {
     list-style-type: none;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+ ::-webkit-scrollbar-thumb {
+    background: #b8bcc3;
+}
