--- a/Source Code/front-end/src/components/Common/CSS/common.scss
+++ b/Source Code/front-end/src/components/Common/CSS/common.scss
@@ -51,3 +51,23 @@ li {
  ::-webkit-scrollbar-thumb {
     background: #b8bcc3;
 }
+
+select {
+    border-radius: 4px;
+    width: 100%;
+    height: 32px;
+    padding-left: 10px;
+    padding-right: 16px;
+    box-sizing: border-box;
+    border: 1px solid #babec5;
+}
+
+select:focus {
+    border: 1px solid #2ca01c;
+    outline-color: #2ca01c;
+}
+
+select option {
+    width: 100%;
+    height: 32px;
+}
